feat[front/backend]: adding pagination to donor page #3 and adding a 404 page #10